rxvt-unicode changelog <= google-friendly title

TODO: move pty/tty handling into a fork'ed server and drop all privs
TODO: harmonize --disable-options into position-dependent options.
TODO: after requesting the selection and getting a timeout, no further requests will be sent.
TODO: "slow" rendering mode for bidi and scripts
TODO: read property sequence is broken with respect to utf-8 etc.
TODO: http://www120.pair.com/mccarthy/nextstep/intro.htmld/Workspace.html is the correct nextstep look.
TODO: clarify and get rid of SMOOTH_REFRESH etc.
WISH: OnTheSpot editing, or maybe switch to miiiiiiif. or maybe use perl and an overlay...
WISH: just for fun, do shade and tint with XRender.
WISH: support tex fonts

9.0
	- use the scrollback buffer even when the scroll region doesn't
          span the whole screen, as long as it starts at row 0.
	- selection popup now shows selection in dec/hex/oct.
        - perl/selection: matching on unicode characters in the selection
          code was O(n²), which equals infinity in some degenerate cases
          :-> Matching is now done on UTF-8, which makes it almost instant.
        - perl/selection, perl/selection-autotransform: regexes are now
          being interpreted in the locale urxvt was started.
        - perl-overlays and refresh hooks were not applied in correct order.
        - changed coordinate-system of view_start/nsaved to be top to bottom.
        - applied many patches by Emanuele Giaquinta that clean the code up
          and fix more bugs in the utmp logging code.
	- add tsl/fsl and related capabilities to the terminfo description,
          to set the window title.

7.0  Fri Jan 13 14:02:18 CET 2006
	- added sections for DISTRIBUTION MAINTAINERS and about
          SETUID/SETGID to the FAQ.
        - selection, searchable-scrollback, selection-popup and
          option-popup extensions enabled by default.
        - increased xft drawing speed for problematic fonts. The effect