@@ -99,7 +99,6 @@ dnl AC_PROG_LIBTOOL()dnl#		libtool
 
 MALLOC_TYPE=S
 
-support_addstrings=no
 support_frills=yes
 support_inheritpixmap=yes
 support_tinting=yes
@@ -389,12 +388,6 @@ AC_DEFINE_UNQUOTED(RXVTNAME,"$RXVTNAME", [Binary base name])
 
 RXVTNAME=`echo "$RXVTNAME"|sed "$program_transform_name"`
 AC_SUBST(RXVTNAME)
-
-AC_ARG_ENABLE(strings,
-  [  --enable-strings        enable some replacement system functions],
-  [if test x$enableval = xyes -o x$enableval = xno; then
-    support_addstrings=$enableval
-  fi])
 
 AC_ARG_ENABLE(swapscreen,
   [  --disable-swapscreen    disable swap screen support],
@@ -1447,10 +1440,6 @@ AC_SUBST(DLIB)
 AC_SUBST(LIBS)
 AC_SUBST(X_LIBS)
 AC_SUBST(X_EXTRA_LIBS)
-
-if test x$support_addstrings = xno; then
-    AC_DEFINE(NO_STRINGS, 1, Define if you don't need to use our replacement string functions)
-fi
 
 dnl# common parts of the Makefile
 MCOMMON=./autoconf/Make.common
